[package]
name = "ssh-agent-router"
version = "0.1.0"
edition = "2021"
authors = ["kawaz"]
description = "SSH agent router with key filtering capabilities"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
ssh-agent = "0.2"
dirs = "5.0"
ratatui = "0.29"
crossterm = "0.28"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
